workspace = { members = [ "src/control-flow", "src/functions", "src/ownership", "src/references-and-borrowing", "src/the-slice-type","src/variables"] }
[package]
name = "number-guess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
